add traduction in locale for price minimum of route

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -94,6 +94,7 @@ en:
       debit_limit_violation: "Message cost (%{cost}) violates your credit limit (%{limit})"
       valid_gsm_number_format: "Only gsm numbers from cubacel allowed, ie 5352134312"
       invalid_cubacel_number: "%{num} is not a valid Cubacel number"
+      route_price_min: "The price has to be greater than "
   time:
     formats:
       verbose_date: ! '%a %B %d, %Y'
