--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -158,6 +158,7 @@ es:
       topup: 'Recarga'
       check_schedule: 'Planificar envio'
       schedule_sms: 'Elija fecha y hora de su envio'
+      backup_sms: 'Respaldar mensaje'
       script_gateway: 'mensaje generado por un script'
     attributes:
       single_message:
