--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -1,5 +1,5 @@
 # Traducciones adicionales en https://github.com/plataformatec/devise/wiki/I18n
- 
+
 es:
   devise:
     confirmations:
@@ -41,7 +41,7 @@ es:
       signed_up_but_locked: "Se ha registrado correctamente, pero no ha podido iniciar sesión porque su cuenta está bloqueada."
       signed_up_but_unconfirmed: "Se le ha enviado un mensaje con un enlace de confirmación. Por favor visite el enlace para activar su cuenta."
       update_needs_confirmation: "Ha actualizado su cuenta correctamente, sin embargo necesitamos verificar su nueva cuenta de correo. Por favor revise su correo electrónico y visite el enlace para finalizar la confirmación de su nueva dirección de correo electrónico."
-      updated: "Ha actualizado tu cuenta correctamente."
+      updated: "Ha actualizado su cuenta correctamente."
     sessions:
       signed_in: "Ha iniciado sesión satisfactoriamente."
       signed_out: "Ha cerrado la sesión satisfactoriamente."
