adds translate to report and adds field body of message to report

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -77,6 +77,8 @@ en:
   activerecord:
     models:
       single_message: 'Single message'
+      single_message_xls: 'Single message'
+      bulk_message_xls: 'Bulk message'
       bulk_message: 'Bulk message'
       list: 'List'
       contact: 'Contact'
