--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -132,6 +132,8 @@ es:
   select_lists: "Seleccione 1 o m&aacute;s listas"
   failed_numbers_link: "N&uacute;meros no entregados"
   movil_number: ' (móvil actual: '
+  not_confirm_number: 'Sin confirmar'
+  confirm_number: 'Confirme clave de su número de télefono móvil'
 
   notice:
     sucess_msg_sent: 'El %{msg} fue iniciado satisfactoriamente'
