--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -122,6 +122,7 @@ es:
   sent_status: 'Pendiente'
   delivered_status: 'Entregado'
   undelivered_status: 'No entregado'
+  undelivered_status_notified: 'Fracasado'
 
   at_route: 'en la ruta: %{route}'
   date_field: Fecha
