added symbol dolar to recharged

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -126,4 +126,4 @@ en:
   low_account: 'Low account balance warning'
   low_account_current: '( current %{credit} )'
   low_account_delete: 'low account deleted'
-  recharge_balance: "Your account has been recharged with %{balance_new}. Knal.es"
+  recharge_balance: "Your account has been recharged with $%{balance_new}. Knal.es"
