added in view index of user field phone

--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -242,3 +242,4 @@ es:
   low_account_delete: 'adventencia de número en rojo eliminada'
   recharge_balance: "Su cuenta ha sido recargada con $%{balance_new}. Knal.es"
   reconfirmed_confirm: 'Enviar mensaje de confirmación otra vez'
+  phone: 'telefono'
