--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -129,3 +129,4 @@ en:
   low_account_delete: 'low account deleted'
   recharge_balance: "Your account has been recharged with $%{balance_new}. Knal.es"
   reconfirmed_confirm: 'reconfirmed key of movil number'
+  phone: 'phone'
