notified user created via web

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -135,3 +135,4 @@ en:
   current_url: 'current url: '
   phone: 'phone'
   search: 'search'
+  confirm_account_create: 'You have been discharged in our system. From today may have contracted services. Knal.es'
