added change in controller and views of unit_views

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -137,3 +137,5 @@ en:
   search: 'search'
   confirm_account_create: 'You have been discharged in our system. From today may have contracted services. Knal.es'
   api_information: 'api information'
+  link_uv: 'Send Message'
+  unit_views: 'join views of send sms'
