added locales for information page index

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -139,3 +139,10 @@ en:
   api_information: 'api information'
   link_uv: 'Send Message'
   unit_views: 'join views of send sms'
+  last_48_hour: 'Last 48 hours'
+  last_15_days: 'Last 15 days'
+  last_60_days: 'Last 60 days'
+  this_year: 'This year'
+  this_week: 'This week'
+  last_500: 'Last 500 days'
+  today: 'Today'
